--- a/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
@@ -28,19 +28,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>*@
                         @if (this.User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="All">Courses</a>
+                                <a class="nav-link text-dark" asp-controller="Courses" asp-action="All">Courses</a>
                             </li>
                         }
                         else if (this.User.IsInRole("Lector") || this.User.IsInRole("User"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="All">Subjects</a>
+                                <a class="nav-link text-dark" asp-controller="Subjects" asp-action="All">Subjects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Grades" asp-action="All">Grades</a>
                             </li>
                         }
                     </ul>
