--- a/Web/BeStudent.Web/Views/Exams/All.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/All.cshtml
@@ -25,6 +25,9 @@
                 <p class="ml-2">@Html.Raw(exam.SanitizedDescription)</p>
                 @foreach (var file in exam.Files)
                 {
+                    <span style="font-size: 1.5em;">
+                        <i class="fas fa-file-download"></i>
+                    </span>
                     <a class="ml-3" href="@file.CloudinaryFileUri" target="_blank">@file.FileDescription</a>
                 }
             </li>
