--- a/Web/BeStudent.Web/Views/Grades/All.cshtml
+++ b/Web/BeStudent.Web/Views/Grades/All.cshtml
@@ -3,6 +3,22 @@
     this.ViewData["Title"] = "Grades";
 }
 
+<head>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="popover"]').popover({
+                trigger: 'hover',
+                placement: 'bottom'
+            });
+        });
+    </script>
+</head>
+
 <div class="container">
     <div class="text-center">
         <h1 class="display-4">@this.ViewData["Title"]</h1>
@@ -17,6 +33,7 @@
             <th scope="col">Exams</th>
         </tr>
     </thead>
+
     @foreach (var subject in Model.Subjects)
     {
         <tbody>
@@ -34,7 +51,11 @@
                                             .FirstOrDefault(g => g.StudentId == Model.StudentId && g.HomeworkId == homework.Id);
                                         if (grade != null)
                                         {
-                                            <td>@grade.Mark</td>
+                                            <td>
+                                                <div data-toggle="popover" title="Description" data-content="@Html.Raw(grade.SanitizedDescription)">
+                                                    @grade.Mark
+                                                </div>
+                                            </td>
                                         }
                                     }
                                 </tr>
@@ -54,7 +75,11 @@
                                             .FirstOrDefault(g => g.StudentId == Model.StudentId && g.ExamId == exam.Id);
                                         if (grade != null)
                                         {
-                                            <td>@grade.Mark</td>
+                                            <td>
+                                                <div data-toggle="popover" title="Description" data-content="@Html.Raw(grade.SanitizedDescription)">
+                                                    @grade.Mark
+                                                </div>
+                                            </td>
                                         }
                                     }
                                 </tr>
