--- a/Web/BeStudent.Web/Views/Subjects/All.cshtml
+++ b/Web/BeStudent.Web/Views/Subjects/All.cshtml
@@ -14,7 +14,9 @@
         {
             <li class="list-group-item">
                 <i class="fas fa-university"></i>
-                <a class="m-2" asp-controller="Subjects" asp-action="Themes" asp-route-subjectName="@subject.Name">@subject.Name</a>
+                <a class="m-2" asp-controller="Subjects" asp-action="Themes" asp-route-subjectName="@subject.Name">
+                    @subject.Name
+                </a>
             </li>
         }
     </ul>
