--- a/Web/BeStudent.Web/Views/Home/Index.cshtml
+++ b/Web/BeStudent.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@using BeStudent.Common
-
 @{
     this.ViewData["Title"] = $"Welcome to {GlobalConstants.SystemName}!";
 }
@@ -7,4 +6,13 @@
 <div class="text-center">
     <h1 class="display-4">@this.ViewData["Title"]</h1>
     <h3 class="display-5">Inspire your studying</h3>
+    @if (this.TempData["message"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @this.TempData["message"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
 </div>
