--- a/Web/BeStudent.Web/Views/Payments/ChooseCourse.cshtml
+++ b/Web/BeStudent.Web/Views/Payments/ChooseCourse.cshtml
@@ -1,17 +1,30 @@
-﻿@model BeStudent.Web.ViewModels.Course.CoursesListViewModel
+﻿@model BeStudent.Web.ViewModels.Payment.PaymentCourseViewModel
+@{
+    this.ViewData["Title"] = $"Next semester to start learning!";
+    var semester = Model.Semester;
+    var remain = (semester.Year % 100) + 1;
+    var semesterName = $"{semester.Year} / {remain} {semester.SemesterType} semester {semester.Number}";
+}
 
+<div class="container">
+    <div class="text-center">
+        <h2 class="display-4">@this.ViewData["Title"]</h2>
 
-
-<div class="container text-center">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown button
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+        <h3>@semesterName</h3>
+        <div id="Partials" class="p-2 flex-grow-1 w-100 flex-fill bd-highlight">
+            <div>
+                <partial name="~/Views/Payments/PaymentList.cshtml" model="@semester.Subjects.ToList()" />
+            </div>
         </div>
     </div>
 </div>
+
+@*<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <div class="dropdown">
+        <button class="btn btn-lg btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Semesters of @Model.Name
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#"></a>
+        </div>
+    </div>*@
