Fixing functionality in whole project

--- a/Web/BeStudent.Web/Views/Courses/All.cshtml
+++ b/Web/BeStudent.Web/Views/Courses/All.cshtml
@@ -13,7 +13,7 @@
         {
             <li class="list-group-item">
                 <i class="fas fa-university"></i>
-                <a class="m-2" asp-controller="Courses" asp-action="ByName" asp-route-courseName="@course.Name" asp-route-courseId="@course.Id">
+                <a class="m-2" asp-controller="Courses" asp-action="ByName" asp-route-courseName="@course.Name">
                     @course.Name
                 </a>
             </li>
