--- a/Web/BeStudent.Web/Views/Homeworks/All.cshtml
+++ b/Web/BeStudent.Web/Views/Homeworks/All.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     this.ViewData["Title"] = "Homeworks";
     var subjectName = Context.Request.Query["subjectName"];
+    var role = Context.Request.Query["role"];
 }
 
 <div class="container">
@@ -23,20 +24,38 @@
                     </span>
                     <a class="ml-5" href="@file.CloudinaryFileUri" target="_blank">@file.FileDescription</a>
                 }
+                @if (role == "Lector")
+                {
+                    <a class="ml-lg-5" asp-controller="Homeworks" asp-action="AddNewFile" asp-route-subjectName="@subjectName" asp-route-homeworkId="@homework.Id" style="font-size: 1.5em;">
+                        <i class="fas fa-plus"></i>
+                    </a>
+                }
+                <br />
+
                 <div class="text-center">
                     <p class="text-center mt-2">@($"End time: {homework.Deadline}!")</p>
 
-                    <a class="btn btn-secondary m-1 w-auto" asp-controller="Homeworks" asp-action="Send" asp-route-subjectName="@subjectName" asp-route-homeworkId="@homework.Id" asp-route-deadline="@homework.Deadline">
-                        Send Homework
-                    </a>
-                    <a class="btn btn-secondary m-1 w-auto" asp-controller="Homeworks" asp-action="Sended" asp-route-subjectName="@subjectName" asp-route-homeworkId="@homework.Id">
-                        Sended Homeworks
-                    </a>
+                    @if (role == "User")
+                    {
+                        <a class="btn btn-secondary m-1 w-auto" asp-controller="Homeworks" asp-action="Send" asp-route-subjectName="@subjectName" asp-route-homeworkId="@homework.Id" asp-route-deadline="@homework.Deadline">
+                            Send Homework
+                        </a>
+                    }
+                    else if (role == "Lector")
+                    {
+                        <a class="btn btn-secondary m-1 w-auto" asp-controller="Homeworks" asp-action="Sended" asp-route-subjectName="@subjectName" asp-route-homeworkId="@homework.Id">
+                            Sended Homeworks
+                        </a>
+                    }
                 </div>
             </li>
         }
     </ul>
+
+    @if (role == "Lector")
+    {
+        <a class="btn btn-secondary m-4 w-auto" asp-controller="Homeworks" asp-action="Create" asp-route-subjectName="@subjectName">
+            Create
+        </a>
+    }
 </div>
-<a class="btn btn-secondary m-4 w-auto" asp-controller="Homeworks" asp-action="Create" asp-route-subjectName="@subjectName">
-    Create
-</a>
