--- a/Web/BeStudent.Web/Views/Themes/All.cshtml
+++ b/Web/BeStudent.Web/Views/Themes/All.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     this.ViewData["Title"] = "Themes";
     var subjectName = Context.Request.Query["subjectName"];
+    var role = Context.Request.Query["role"];
 }
 
 <div class="container">
@@ -24,7 +25,10 @@
             </li>
         }
     </ul>
-    <a class="btn btn-secondary m-4 w-auto" asp-controller="Themes" asp-action="Create" asp-route-subjectName="@subjectName">
-        Create
-    </a>
+    @if (role == "Lector")
+    {
+        <a class="btn btn-secondary m-4 w-auto" asp-controller="Themes" asp-action="Create" asp-route-subjectName="@subjectName">
+            Create
+        </a>
+    }
 </div>
