--- a/Web/BeStudent.Web/Views/Semesters/AddLector.cshtml
+++ b/Web/BeStudent.Web/Views/Semesters/AddLector.cshtml
@@ -4,8 +4,17 @@
 }
 <div class="container">
     <h1 class="mb-2 text-center">@this.ViewData["Title"]</h1>
+    @if (this.TempData["message"] != null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @this.TempData["message"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
 
-    <form method="post" asp-controller="Semesters"  asp-action="AddLector" asp-route-subjectId="@Model.SubjectId" asp-route-semesterId="@Model.SemesterId">
+    <form method="post" asp-controller="Semesters" asp-action="AddLector" asp-route-subjectId="@Model.SubjectId" asp-route-semesterId="@Model.SemesterId">
         <div class="form-group">
             <label asp-for="Email"></label>
             <input asp-for="Email" class="form-control" />
