--- a/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,13 @@
                                 <a class="nav-link text-dark" asp-controller="Courses" asp-action="All">Courses</a>
                             </li>
                         }
-                        else if (this.User.IsInRole("Lector") || this.User.IsInRole("User"))
+                        else if (this.User.IsInRole("Lector"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Subjects" asp-action="All">Subjects</a>
+                            </li>
+                        }
+                        else if (this.User.IsInRole("User"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Subjects" asp-action="All">Subjects</a>
