--- a/Web/BeStudent.Web/Views/Home/Index.cshtml
+++ b/Web/BeStudent.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     this.ViewData["Title"] = $"Welcome to {GlobalConstants.SystemName}!";
 }
 
-<div class="text-center">
+<div class="container text-center">
     <h1 class="display-4">@this.ViewData["Title"]</h1>
     <h3 class="display-5">Inspire your studying</h3>
     @if (this.TempData["message"] != null)
