--- a/Web/BeStudent.Web/Views/Subjects/Create.cshtml
+++ b/Web/BeStudent.Web/Views/Subjects/Create.cshtml
@@ -13,13 +13,14 @@
         </div>
         <div class="form-group">
             <label asp-for="Price"></label>
-            <input asp-for="Price" class="form-control" />
+            <input type="number" asp-for="Price" class="form-control" />
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <br />
             <p>Lectors</p>
-            <label>You should fill in this field with one or more emails separate with white space.</label>
+            <label>You can fill in this field with one or more emails separate with white space.</label>
             <input asp-for="Emails" class="form-control" />
             <span asp-validation-for="Emails" class="text-danger"></span>
         </div>
