--- a/Web/BeStudent.Web/Views/Exams/SetGrade.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/SetGrade.cshtml
@@ -3,21 +3,10 @@
     this.ViewData["Title"] = "Set Grade";
 }
 
-<script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-    tinymce.init({
-        selector: "textarea",
-        plugins: [
-            "image paste table link code media"
-        ]
-    });
-</script>
-
 <div class="container">
     <h1 class="mb-2">@this.ViewData["Title"]</h1>
 
-    <form method="post" asp-action="SetGrade" asp-route-subjectName="@Model.SubjectName" asp-route-examId="@Model.ExamId" asp-route-studentId="@Model.StudentId" asp-route-sendFileId="@Model.SendFileId" enctype="multipart/form-data">
+    <form method="post" asp-action="SetGrade" asp-route-subjectName="@Model.SubjectName" asp-route-examId="@Model.ExamId" asp-route-studentId="@Model.StudentId" asp-route-sendFileId="@Model.SendFileId">
         <div class="form-group">
             <label asp-for="Mark"></label>
             <input asp-for="Mark" class="form-control" />
@@ -25,7 +14,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Description"></label>
-            <textarea asp-for="Description" class="form-control"></textarea>
+            <input asp-for="Description" class="form-control" />
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <br />
