--- a/Web/BeStudent.Web/Views/Home/Index.cshtml
+++ b/Web/BeStudent.Web/Views/Home/Index.cshtml
@@ -15,4 +15,5 @@
             </button>
         </div>
     }
+    <h5>Go to the <a asp-controller="Home" asp-action="Chat">chat page</a>.</h5>
 </div>
